# gol

./: CMakeLists.txt  LICENSE  Makefile  README.md  game.h  install.sh  logic.c  logic.h  main.c  render.c  render.h
